--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <h1>PODMAN DEMOOOOOOOO</h1>
-    <p>Podman công cụ dòng lệnh mã nguồn mở để quản lý các container Linux. Nó cung cấp các tính năng tương tự như Docker, nhưng không yêu cầu một daemon chạy ngầm.</p>
+    <p>Podman công cụ dòng lệnh mã nguồn mở để quản  các container Linux. Nó cung cấp các tính năng tương tự như Docker, nhưng không yêu cầu một daemon chạy ngầm.</p>
     
     <h2>Ví dụ về chạy một container với Podman</h2>
     <pre><code>podman run -d --name nginx -p 8080:80 nginx</code></pre>
