--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <pre><code>podman ps</code></pre>
     <p>Lệnh trên sẽ hiển thị danh sách các container đang chạy trên hệ thống.</p>
     
-    <h2>Ví dụ về dừng và xóa một container</h2>
+    <h2>Ví dụ về dừng và  một container</h2>
     <pre><code>podman stop nginx
 podman rm nginx</code></pre>
     <p>Lệnh đầu tiên sẽ dừng container có tên là "nginx", và lệnh thứ hai sẽ xóa container đó.</p>
