--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <pre><code>podman run -d --name nginx -p 8080:80 nginx</code></pre>
     <p>Lệnh trên sẽ chạy một container Nginx và ánh xạ cổng 8080 của máy chủ tới cổng 80 của container.</p>
     
-    <h2>Ví dụ về liệt kê các container đang chạy</h2>
+    <h2>Ví dụ về  container đang chạy</h2>
     <pre><code>podman ps</code></pre>
     <p>Lệnh trên sẽ hiển thị danh sách các container đang chạy trên hệ thống.</p>
     
