--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
 podman rm nginx</code></pre>
     <p>Lệnh đầu tiên sẽ dừng container có tên là "nginx", và lệnh thứ hai sẽ xóa container đó.</p>
     
-    <p>Trên đây là một số ví dụ cơ bản về cách sử dụng Podman để quản lý các container Linux.</p>
+    <p>Trên đây là một sốdụ cơ bản về cách sử dụng Podman để quản lý các container Linux.</p>
 </body>
 </html>
