--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h2>Ví dụ về dừng và  một contaner</h2>
     <pre><code>podman stop nginx
 podman rm nginx</code></pre>
-    <p>Lệnh đầu tiên sẽng container có tên là "nginx", và lệnh thứ hai sẽ xóa container đó.</p>
+    <p>Lệnh đầu tiên sẽng contain"nginx", và lệnh thứ hai sẽ xóa container đó.</p>
     
     <p>Trên đây là một sốdụ cơ bản về cách sử dụng Podman để quản lý các container Linux.</p>
 </body>
